--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -829,6 +829,10 @@ body::selection{
   width: 0.375rem;
 }
 
+.w-12{
+  width: 3rem;
+}
+
 .w-16{
   width: 4rem;
 }
@@ -859,6 +863,10 @@ body::selection{
 
 .w-72{
   width: 18rem;
+}
+
+.w-8{
+  width: 2rem;
 }
 
 .w-\[200px\]{
@@ -948,6 +956,12 @@ body::selection{
 
 .cursor-not-allowed{
   cursor: not-allowed;
+}
+
+.select-none{
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .select-all{
@@ -1124,6 +1138,11 @@ body::selection{
   border-width: 1px;
 }
 
+.border-y{
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+}
+
 .border-b{
   border-bottom-width: 1px;
 }
@@ -1138,6 +1157,10 @@ body::selection{
 
 .border-t{
   border-top-width: 1px;
+}
+
+.border-none{
+  border-style: none;
 }
 
 .border-amber-500\/20{
@@ -1191,6 +1214,11 @@ body::selection{
 
 .border-white\/5{
   border-color: rgb(255 255 255 / 0.05);
+}
+
+.bg-\[\#0a0a0c\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(10 10 12 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#6366f1\]{
@@ -1523,6 +1551,11 @@ body::selection{
   color: rgb(34 211 238 / var(--tw-text-opacity, 1));
 }
 
+.text-emerald-300{
+  --tw-text-opacity: 1;
+  color: rgb(110 231 183 / var(--tw-text-opacity, 1));
+}
+
 .text-emerald-400{
   --tw-text-opacity: 1;
   color: rgb(52 211 153 / var(--tw-text-opacity, 1));
@@ -1536,6 +1569,15 @@ body::selection{
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity, 1));
+}
+
+.text-primary\/70{
+  color: rgb(99 102 241 / 0.7);
+}
+
+.text-rose-300{
+  --tw-text-opacity: 1;
+  color: rgb(253 164 175 / var(--tw-text-opacity, 1));
 }
 
 .text-rose-400{
@@ -1627,6 +1669,12 @@ body::selection{
   transition-duration: 150ms;
 }
 
+.transition-colors{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-transform{
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1642,11 +1690,12 @@ body::selection{
 }
 
 html, body, #root {
-  height: 100%;
-  background-color: #03050d;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
+  height: 100% !important;
+  width: 100% !important;
+  background-color: #03050d !important;
+  overflow: hidden !important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 /* Custom Scrollbar styling */
@@ -1732,6 +1781,10 @@ html, body, #root {
   background-color: rgb(217 119 6 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-emerald-500\/15:hover{
+  background-color: rgb(16 185 129 / 0.15);
+}
+
 .hover\:bg-emerald-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(5 150 105 / var(--tw-bg-opacity, 1));
@@ -1750,6 +1803,10 @@ html, body, #root {
 .hover\:bg-rose-500:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(244 63 94 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-rose-500\/15:hover{
+  background-color: rgb(244 63 94 / 0.15);
 }
 
 .hover\:bg-white\/10:hover{
